--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 :root
 {
-  background-color: LightBlue;
+  background-color: aqua;
 }
 img
 {
@@ -10,4 +10,11 @@ img
 h1
 {
   font-size: 45px;
+  color: darkblue;
+  texti-align: center;
+}
+
+h2, h3, h4, h5, h6
+{
+  color: blueviolet;
 }
