--- a/css/main.css
+++ b/css/main.css
@@ -10,11 +10,15 @@ img
 h1
 {
   font-size: 45px;
-  color: darkblue;
+  color: purple;
   texti-align: center;
 }
 
 h2, h3, h4, h5, h6
 {
   color: blueviolet;
+}
+a
+{
+  color: indigo;
 }
